Source/WebCore/css/FontLoader.h
@@ -45,6 +45,7 @@ class Dictionary;
 class Document;
 class Event;
 class Font;
+class LoadFontCallback;
 class ScriptExecutionContext;
 
 class FontLoader : public RefCounted<FontLoader>, public ActiveDOMObject, public EventTarget {
@@ -63,9 +64,11 @@ public:
 
     bool checkFont(const String&, const String&);
     void loadFont(const Dictionary&);
+    void loadFontDone(const LoadFontCallback&);
+
     void notifyWhenFontsReady(PassRefPtr<VoidCallback>);
 
-    bool loading() const { return m_loadingCount > 0; }
+    bool loading() const { return m_numLoadingFromCSS > 0; }
 
     virtual ScriptExecutionContext* scriptExecutionContext() const;
     virtual EventTargetInterface eventTargetInterface() const;
@@ -81,6 +84,8 @@ public:
     void loadError(CSSFontFaceRule*, CSSFontFaceSource*);
     void loadingDone();
 
+    virtual bool canSuspend() const override { return !m_numLoadingFromCSS && !m_numLoadingFromJS; }
+
 private:
     FontLoader(Document*);
 
@@ -95,7 +100,8 @@ private:
 
     Document* m_document;
     EventTargetData m_eventTargetData;
-    unsigned m_loadingCount;
+    unsigned m_numLoadingFromCSS;
+    unsigned m_numLoadingFromJS;
     Vector<RefPtr<Event>> m_pendingEvents;
     Vector<RefPtr<VoidCallback>> m_callbacks;
     RefPtr<Event> m_loadingDoneEvent;
